--- a/Exercise1_stephanyorjuela.Rmd
+++ b/Exercise1_stephanyorjuela.Rmd
@@ -10,17 +10,24 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ###Part 2 
-Create an HTML/PDF document that samples 100 values from a log-normal distribution (say, mu=1, sigma=.25)
+**Create an HTML/PDF document that samples 100 values from a log-normal distribution (say, mu=1, sigma=.25)**
+
 
 ```{r sample}
 x = rlnorm(1000, meanlog=1, sdlog=.25)
 ```
 
 
-Create a histogram of the distribution and the distribution on the log scale; report the mean and variance of the sample in line in the text.
+**Create a histogram of the distribution and the distribution on the log scale**
+
 
 ```{r histogram}
 hist(x,200)
 hist(log(x),200)
 ```
+
+
+**Report the mean and variance of the sample in line in the text: **
+
+So the mean is `r mean(x)` and the variance is `r var(x)`
 
